--- a/info/index.html
+++ b/info/index.html
@@ -10,42 +10,96 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container">
-        <a class="navbar-brand" href="#">Pizza</a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container-fluid">
+          <a class="navbar-brand" href="#”>Pizzamania</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+<div class="collapse navbar-collapse" id="navbarSupportedContent">
+<ul class="navbar-nav me-auto”><ul class="navbar-nav">
+                  <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+     </ul>
+                </div>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="#">News & Events</a>
+    <main>
+      <div class="heading">
+        <img src="../images/licensed-image.jpg" alt="" />
+        <h1>Pizza</h1>
+      </div>
+
+      <div class="info-container">
+        <div class="pre-info">
+          <p>Servings: <span class="bold">4</span></p>
+          <p>Prepping Time: <span class="bold">25 mins</span></p>
+          <p>Cooking Time: <span class="bold">10 mins</span></p>
+        </div>
+
+        <div class="ingredients-steps">
+          <ul class="ingredients">
+            <li>300g strong bread flour</li>
+            <li>1 tsp instant yeast (from a sachet or a tub)</li>
+            <li>1 tsp salt</li>
+            <li>1 tbsp olive oil, plus extra for drizzling</li>
+            <li>100ml passata</li>
+            <li>handful fresh basil or 1 tsp dried</li>
+            <li>1 garlic clove, crushed</li>
+            <li>125g ball mozzarella, sliced</li>
+            <li>
+              handful grated or shaved parmesan (or vegetarian alternative)
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Gallery</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li>handful of cherry tomatoes, halved</li>
+            <li>handful of basil leaves (optional)</li>
           </ul>
+
+          <ol class="steps">
+            <li>
+              <span class="bold">Make the base:</span> Put the flour into a
+              large bowl, then stir in the yeast and salt. Make a well, pour in
+              200ml warm water and the olive oil and bring together with a
+              wooden spoon until you have a soft, fairly wet dough. Turn onto a
+              lightly floured surface and knead for 5 mins until smooth. Cover
+              with a tea towel and set aside. You can leave the dough to rise if
+              you like, but it's not essential for a thin crust.
+            </li>
+            <li>
+              <span class="bold">Make the sauce:</span> Mix the passata, basil
+              and crushed garlic together, then season to taste. Leave to stand
+              at room temperature while you get on with shaping the base.
+            </li>
+            <li>
+              <span class="bold">Roll out the dough:</span> if you've let the
+              dough rise, give it a quick knead, then split into two balls. On a
+              floured surface, roll out the dough into large rounds, about 25cm
+              across, using a rolling pin. The dough needs to be very thin as it
+              will rise in the oven. Lift the rounds onto two floured baking
+              sheets.
+            </li>
+            <li>
+              <span class="bold">Top and bake:</span> heat the oven to 240C/220C
+              fan/gas 8. Put another baking sheet or an upturned baking tray in
+              the oven on the top shelf. Smooth sauce over bases with the back
+              of a spoon. Scatter with cheese and tomatoes, drizzle with olive
+              oil and season. Put one pizza, still on its baking sheet, on top
+              of the preheated sheet or tray. Bake for 8-10 mins until crisp.
+              Serve with a little more olive oil, and basil leaves if using.
+              Repeat step for remaining pizza.
+            </li>
+          </ol>
         </div>
       </div>
-    </nav>
+    </main>
 
-    <main></main>
-
-    <script
+    <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
-    ></script>
+    ></script> -->
   </body>
 </html>
