--- a/info/index.html
+++ b/info/index.html
@@ -13,20 +13,30 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body class="d-flex flex-column min-vh-100">
+    <nav class="navbar navbar-expand-lg">
+      <div class="container">
+        <a href="#" class="navbar-brand d-lg-flex">Pizzamania</a>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container-fluid">
-          <a class="navbar-brand" href="#”>Pizzamania</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-<div class="collapse navbar-collapse" id="navbarSupportedContent">
-<ul class="navbar-nav me-auto”><ul class="navbar-nav">
-                  <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-                  <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
-     </ul>
-                </div>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav d-lg-flex">
+            <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <main>
       <div class="heading">
