--- a/info/index.html
+++ b/info/index.html
@@ -14,9 +14,8 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
-      <div class="container">
-        <a href="#" class="navbar-brand d-lg-flex">Pizzamania</a>
-
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Pizzamania</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -28,11 +27,17 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav d-lg-flex">
+          <ul class="navbar-nav me-auto">
+            <!--<li class="nav-item"><a class="nav-link" href="#">About us</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Reservation</a></li> -->
+          </ul>
+          <!--<a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a> -->
+          <ul class="navbar-nav">
             <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> -->
           </ul>
         </div>
       </div>
