Add img alt attribute

--- a/info/index.html
+++ b/info/index.html
@@ -45,7 +45,7 @@
 
     <main>
       <div class="heading">
-        <img src="../images/licensed-image.jpg" alt="" />
+        <img src="../images/licensed-image.jpg" alt="image of pizza" />
         <h1>Pizza</h1>
       </div>
 
