--- a/info/index.html
+++ b/info/index.html
@@ -35,8 +35,12 @@
           </ul>
           <!--<a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a> -->
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../order/index.html">Order</a>
+            </li>
             <!-- <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> -->
           </ul>
         </div>
