--- a/order/index.html
+++ b/order/index.html
@@ -35,13 +35,38 @@
           </ul>
           <!--<a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a> -->
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="../info/index.html">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Order</a>
+            </li>
             <!-- <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> -->
           </ul>
         </div>
       </div>
     </nav>
+
+    <main>
+      <div class="cards">
+        <div class="card" style="width: 18rem">
+          <img
+            src="../images/licensed-image.jpg"
+            class="card-img-top"
+            alt="image of pizza"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">
+              Some quick example text to build on the card title and make up the
+              bulk of the card's content.
+            </p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="order-info"></div>
+    </main>
 
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
