Add info into card, tweak img alt

--- a/order/index.html
+++ b/order/index.html
@@ -53,15 +53,12 @@
           <img
             src="../images/licensed-image.jpg"
             class="card-img-top"
-            alt="image of pizza"
+            alt="image of pepperoni pizza"
           />
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">
-              Some quick example text to build on the card title and make up the
-              bulk of the card's content.
-            </p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Pepperoni Pizza</h5>
+            <p class="card-text">An original take on a classic.</p>
+            <a href="#" class="btn btn-primary">Order now</a>
           </div>
         </div>
       </div>
