--- a/order/index.html
+++ b/order/index.html
@@ -48,7 +48,32 @@
     </nav>
 
     <main>
+      <h1>Options</h1>
       <div class="cards">
+        <div class="card" style="width: 18rem">
+          <img
+            src="../images/licensed-image.jpg"
+            class="card-img-top"
+            alt="image of pepperoni pizza"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Pepperoni Pizza</h5>
+            <p class="card-text">An original take on a classic.</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
+        <div class="card" style="width: 18rem">
+          <img
+            src="../images/licensed-image.jpg"
+            class="card-img-top"
+            alt="image of pepperoni pizza"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Pepperoni Pizza</h5>
+            <p class="card-text">An original take on a classic.</p>
+            <a href="#" class="btn btn-primary">Order now</a>
+          </div>
+        </div>
         <div class="card" style="width: 18rem">
           <img
             src="../images/licensed-image.jpg"
@@ -65,10 +90,10 @@
       <div class="order-info"></div>
     </main>
 
-    <!-- <script
+    <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
-    ></script> -->
+    ></script>
   </body>
 </html>
