Complete order page markup

--- a/order/index.html
+++ b/order/index.html
@@ -49,45 +49,68 @@
 
     <main>
       <h1>Options</h1>
-      <div class="cards">
-        <div class="card" style="width: 18rem">
-          <img
-            src="../images/licensed-image.jpg"
-            class="card-img-top"
-            alt="image of pepperoni pizza"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Pepperoni Pizza</h5>
-            <p class="card-text">An original take on a classic.</p>
-            <a href="#" class="btn btn-primary">Order now</a>
+      <div class="container">
+        <div class="cards">
+          <div class="card" style="width: 18rem">
+            <img
+              src="../images/licensed-image.jpg"
+              class="card-img-top"
+              alt="image of pepperoni pizza"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni Pizza</h5>
+              <p class="card-text">An original take on a classic.</p>
+              <a href="#" class="btn btn-primary">Order now</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img
+              src="../images/licensed-image.jpg"
+              class="card-img-top"
+              alt="image of pepperoni pizza"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni Pizza</h5>
+              <p class="card-text">An original take on a classic.</p>
+              <a href="#" class="btn btn-primary">Order now</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img
+              src="../images/licensed-image.jpg"
+              class="card-img-top"
+              alt="image of pepperoni pizza"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni Pizza</h5>
+              <p class="card-text">An original take on a classic.</p>
+              <a href="#" class="btn btn-primary">Order now</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem">
+            <img
+              src="../images/licensed-image.jpg"
+              class="card-img-top"
+              alt="image of pepperoni pizza"
+            />
+            <div class="card-body">
+              <h5 class="card-title">Pepperoni Pizza</h5>
+              <p class="card-text">An original take on a classic.</p>
+              <a href="#" class="btn btn-primary">Order now</a>
+            </div>
           </div>
         </div>
-        <div class="card" style="width: 18rem">
-          <img
-            src="../images/licensed-image.jpg"
-            class="card-img-top"
-            alt="image of pepperoni pizza"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Pepperoni Pizza</h5>
-            <p class="card-text">An original take on a classic.</p>
-            <a href="#" class="btn btn-primary">Order now</a>
-          </div>
-        </div>
-        <div class="card" style="width: 18rem">
-          <img
-            src="../images/licensed-image.jpg"
-            class="card-img-top"
-            alt="image of pepperoni pizza"
-          />
-          <div class="card-body">
-            <h5 class="card-title">Pepperoni Pizza</h5>
-            <p class="card-text">An original take on a classic.</p>
-            <a href="#" class="btn btn-primary">Order now</a>
+        <div class="order-info">
+          <div class="card">
+            <div class="card-header">Providers</div>
+            <div class="card-body">
+              <img src="../images/ubereats.png" alt="ubereats icon" />
+              <img src="../images/img.icons8.png" alt="justeat icon" />
+              <img src="../images/deliveroo.png" alt="deliveroo icon" />
+            </div>
           </div>
         </div>
       </div>
-      <div class="order-info"></div>
     </main>
 
     <script
