--- a/home/index.html
+++ b/home/index.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-white">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Pizzamania</a>
+            <a class="navbar-brand" href="./index.html">Pizzamania</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,7 +26,7 @@
                 <!--<a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a> -->
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../order/index.html">Order</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> -->
                 </ul>
             </div>
@@ -45,29 +45,30 @@
                     </p>
                     <div class="button-container">
 
-                    <a href="#" class="btn btn-outline-light p-4 rounded-0">Order here</a>
+                    <a href="../order/index.html" class="btn btn-outline-light p-4 rounded-0">Order here</a>
                 </div>
                 </div>
             </div>
         </div>
     </main>
 <!--Bottom of the page-->
-    <footer class="bg-dark text-white py-4">
-        <div class="container">
-            <div class="row">
-                <div class="col d-flex justify-content-between align-items-center">
-                    <div class="social-icons">
-                        <i class="fab fa-twitter fs-3"></i>
-                        <i class="fab fa-facebook fs-3"></i>
-                        <i class="fab fa-instagram fs-3"></i>
-                    </div>
-                    <div class="address">
-                        Pizza world
-                    </div>
+<footer class="bg-dark text-white py-4">
+    <div class="container">
+        <div class="row">
+            <div class="col d-flex justify-content-between align-items-center">
+                <div class="social-icons">
+                    <i class="fab fa-twitter fs-3"></i>
+                    <i class="fab fa-facebook fs-3"></i>
+                    <i class="fab fa-instagram fs-3"></i>
+                </div>
+                <div class="address">
+                    Pizza world
                 </div>
             </div>
         </div>
-    </footer>
+    </div>
+</footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
