--- a/info/index.html
+++ b/info/index.html
@@ -15,7 +15,7 @@
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Pizzamania</a>
+        <a class="navbar-brand" href="../index.html">Pizzamania</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,8 +35,12 @@
           </ul>
           <!--<a href="#" class="navbar-brand d-none d-lg-flex mx-lg-auto">Reddé</a> -->
           <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="#">Info</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Order</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="./index.html">Info</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../order/index.html">Order</a>
+            </li>
             <!-- <li class="nav-item"><a class="nav-link" href="#">Contact</a></li> -->
           </ul>
         </div>
