--- a/order/index.html
+++ b/order/index.html
@@ -17,7 +17,7 @@
   <body class="d-flex flex-column min-vh-100 gap-y-3">
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../home/index.html">Pizzamania</a>
+        <a class="navbar-brand" href="../index.html">Pizzamania</a>
         <button
           class="navbar-toggler"
           type="button"
